--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Js Battleship</title>
-    <link rel="stylesheet" href="/styless.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     
@@ -15,16 +15,16 @@
     <div id="gamesboard-container"></div>
 
         <div class="option-container">
-            <div class="destroyer-preview destroyer" draggable="true"></div>
-            <div class="submarine-preview submarine" draggable="true"></div>
-            <div class="cruiser-preview cruiser" draggable="true"></div>
-            <div class="battleship-preview battleship" draggable="true"></div>
-            <div class="carrier-preview carrier" draggable="true"></div>
+            <div id= "0" class="destroyer-preview destroyer" draggable="true"></div>
+            <div id ="1" class="submarine-preview submarine" draggable="true"></div>
+            <div id="2" class="cruiser-preview cruiser" draggable="true"></div>
+            <div id="3" class="battleship-preview battleship" draggable="true"></div>
+            <div id="4" class="carrier-preview carrier" draggable="true"></div>
         </div>
 
         <button id="flip-button">FLIP</button>
         <button id="start-button">START</button>
     
-        <script src="app.js"></script>
+        <script src="/app.js"></script>
 </body>
 </html>
